// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup tests should render Popup correctly 1`] = `
<DocumentFragment>
  .c3 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  font-weight: 400;
  width: 100%;
}

.c3:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c3:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c3 .material-symbols-sharp {
  color: inherit;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  right: 0;
  top: 0;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  padding: 0.25rem;
  border-radius: 4px;
  width: 9.375rem;
  z-index: 109;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c2 {
  display: flex;
  flex-direction: column;
}

<div
    class="c0"
    position="absolute"
    right="0"
    top="0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <span
            class=""
          >
            Edit
          </span>
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <span
            class=""
          >
            History
          </span>
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <span
            class=""
          >
            Delete
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Popup tests should render Popup with icons 1`] = `
<DocumentFragment>
  .c4 {
  height: 1.125rem;
  width: 1.125rem;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c5 {
  color: #000000;
  font-size: 1.125rem;
}

.c3 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  font-weight: 400;
  width: 100%;
}

.c3:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c3:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c3 .material-symbols-sharp {
  color: inherit;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  right: 0;
  top: 0;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  padding: 0.25rem;
  border-radius: 4px;
  width: 9.375rem;
  z-index: 109;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c2 {
  display: flex;
  flex-direction: column;
}

<div
    class="c0"
    position="absolute"
    right="0"
    top="0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <div
            class="c4"
            data-testid="icon-container"
            mr="0.5rem"
            size="18"
          >
            <span
              class="c5 material-symbols-sharp"
              data-testid="icon"
              size="18"
            >
              edit
            </span>
          </div>
          <span
            class=""
          >
            Edit
          </span>
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <div
            class="c4"
            data-testid="icon-container"
            mr="0.5rem"
            size="18"
          >
            <span
              class="c5 material-symbols-sharp"
              data-testid="icon"
              size="18"
            >
              edit
            </span>
          </div>
          <span
            class=""
          >
            History
          </span>
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3"
          data-testid="button"
          font-weight="400"
          variant="neutral"
        >
          <div
            class="c4"
            data-testid="icon-container"
            mr="0.5rem"
            size="18"
          >
            <span
              class="c5 material-symbols-sharp"
              data-testid="icon"
              size="18"
            >
              edit
            </span>
          </div>
          <span
            class=""
          >
            Delete
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
